Fixes catalog item styling, uses higher res logo, fixes other spacing and placement issues

--- a/src/pages/public/Companion/biztecho.webflow.css
+++ b/src/pages/public/Companion/biztecho.webflow.css
@@ -11508,6 +11508,16 @@ figcaption {
   align-items: center;
   display: flex;
   flex-direction: row;
+  margin-left: 5%;
+  /* justify-content: center; */
+}
+
+.container-36 {
+  margin-top: 25px;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  margin-left: 5%;
   justify-content: center;
 }
 
